url fix for portfolio

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                </div>
             </div>
             <div class="contact">
-               <a href="michaelbosik.com"><img src="http://michaelbosik.github.io/website/images/brand/logo.png"></a>
+               <a href="https://michaelbosik.com"><img src="http://michaelbosik.github.io/website/images/brand/logo.png"></a>
                <div class="row justify-content-center">
                   <a href="https://github.com/michaelbosik" target="__blank"><i class="fab fa-github"></i></a>
                   <a href="https://www.youtube.com/michaelbosik" target="__blank"><i class="fab fa-youtube"></i></a>
