added class interests

--- a/index.html
+++ b/index.html
@@ -93,6 +93,20 @@
                      </ul>
                   </div>
                </div>
+               <!--Interests for this class-->
+               <div class="row justify-content-center data">
+                  <h1 class="col-12">Interests for this Class</h1>
+                  <div class="col-12">
+                     <ul>
+                        <li>Pysics Game</li>
+                        <li>Puzzle Game</li>
+                        <li>VR</li>
+                        <li>Anything with unique game mechanics really</li>
+                     </ul>
+                  </div>
+                  <div class="col-12 col-lg-6">
+                  </div>
+               </div>
             </div>
             <div class="contact">
                <a href="https://michaelbosik.com"><img src="http://michaelbosik.github.io/website/images/brand/logo.png"></a>
